--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather</title>
-    <link rel="stylesheet" href="src/script.css" />
+    <link rel="stylesheet" href="script.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,7 +47,7 @@
       </div>
     </div>
   </body>
-  <script src="src/script.js"></script>
+  <script src="script.js"></script>
   <script
     src="https://kit.fontawesome.com/0e4adee97a.js"
     crossorigin="anonymous"
