github link added in HTML

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
           <div class="col-4">Looks Like</div>
           <div id="description" class="col-4"></div>
           <div class="col-4">☀️</div>
+          <a
+            id="github-link"
+            href="https://github.com/taymick13/Weather-Application"
+          ></a>
         </div>
       </div>
     </div>
