--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="card w-75">
+      <div class="card w-100">
         <div class="card-body">
           <form id="search-weather">
             <input
@@ -29,29 +29,68 @@
             />
             <input type="submit" id="submit-city" value="search" />
           </form>
-          <h5 id="card-title" class="card-title">Nashville</h5>
-          <h2>Today's Date</h2>
-          <div id="temp-day" class="col-4">˚F</div>
-          <div class="col-4">🌧</div>
-          <br />
-          <div class="float-left">
-            <div class="col-6">Feels Like</div>
-            <div id="feels-like"></div>
-            <div>⛅️</div>
+          <hr/>
+          <table id="table">
+            <td id="card-title" class="card-title"> ☀️<br/>
+              Nashville
+            </td>
+            <th id="date">Today's Date</th>
+
+            <td id="info" style=width:50%;>
+              <ul id="lists">
+                <li id="temp-day"> ˚F</li>
+                <br /><hr/>
+                <li>Feels Like</li>
+                <li id="feels-like"></li>
+                <br /><hr/>
+                <li>Looks Like</li>
+                <li id="description" class="col-4"></li>
+              </ul>
+            </td>
+          </table>
+          <hr/>
+          <h5>5 Day Outlook</h5>
+        <div class="row">
+          <div class="col-sm border">
+            <p>Monday</p>
+            <p>☀️</p>
+            <p>85-90°</p>
           </div>
-          <br />
-          <div class="col-4">Looks Like</div>
-          <div id="description" class="col-4"></div>
-          <div class="col-4">☀️</div>
-          <a
-            id="github-link"
-            href="https://github.com/taymick13/Weather-Application"
-          ></a>
+          <div class="col-sm border">
+            <p>Tuesday</p>
+            <p >☀️</p>
+            <p>82-95°</p>
+          </div>
+          <div class="col-sm border">
+            <p>Wednesday</p>
+            <p>☀️</p>
+            <p>91-100°</p>
+          </div>
+          <div class="col-sm border">
+            <p>Thursday</p>
+            <p>☀️</p>
+            <p>88-100°</p>
+          </div>
+          <div class="col-sm border">
+            <p>Friday</p>
+            <p>☀️</p>
+            <p>89-95°</p>
+          </div>
+        </div>
+        </div>
+        </div>
+      </div>
         </div>
       </div>
     </div>
+   <footer>  <div> <a
+    id="github-link"
+    href="https://github.com/taymick13/Weather-Application">
+    GitHub</a>
+</div>
+</footer>
   </body>
-  <script src="script.js"></script>
+  <script src="src/script.js"></script>
   <script
     src="https://kit.fontawesome.com/0e4adee97a.js"
     crossorigin="anonymous"
