--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather</title>
-    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,6 +17,8 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Weather</title>
   </head>
   <body>
     <div class="container">
@@ -57,9 +57,9 @@
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temp-day"></strong
-                  ><span class="units" class="active"
-                    ><a href="#" id="c-link">˚C</a> |
-                    <a href="#" id="f-link">˚F</a></span
+                  ><span class="units"
+                    ><a href="#" id="celciusLink" class="active">˚C</a> |
+                    <a href="#" id="fahreinheitLink">˚F</a></span
                   >
                 </div>
               </div>
