Spelling corrections in JS/HTML

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <div class="float-left">
                   <strong id="temp-day"></strong
                   ><span class="units"
-                    ><a href="#" id="celciusLink" class="active">˚C</a> |
-                    <a href="#" id="fahreinheitLink">˚F</a></span
+                    ><a href="#" id="celsiusLink">˚C</a> |
+                    <a href="#" id="fahrenheitLink" class="active">˚F</a></span
                   >
                 </div>
               </div>
@@ -71,6 +71,7 @@
               </ul>
             </div>
           </div>
+          <hr />
           <small
             ><a
               id="github-link"
@@ -78,7 +79,10 @@
             >
               GitHub</a
             >
-            Coded by Taylor Mickelson</small
+            Coded by
+            <a href="www.linkedin.com/in/taylor-mickelson2015"
+              >Taylor Mickelson</a
+            ></small
           >
         </div>
       </div>
