Correct JS code temp-day

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <div class="float-left">
                   <strong id="temp-day"></strong
                   ><span class="units"
-                    ><a href="#" id="celsiusLink">˚C</a> |
-                    <a href="#" id="fahrenheitLink" class="active">˚F</a></span
+                    ><a href="#" id="celsiusLink" class="active">˚C</a> |
+                    <a href="#" id="fahrenheitLink">˚F</a></span
                   >
                 </div>
               </div>
