updated HTML, added styling, added to displayForecast

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <li>Wind: <span id="wind"></span>m/h</li>
               </ul>
             </div>
+            <div class="weather-forecast" id="forecast">Hello</div>
           </div>
           <hr />
           <small
