update URL for github/linked in/spelling in JS

--- a/index.html
+++ b/index.html
@@ -70,18 +70,22 @@
                 <li>Wind: <span id="wind"></span>m/h</li>
               </ul>
             </div>
-            <div class="weather-forecast" id="forecast">Hello</div>
+            <div class="weather-forecast" id="forecast"></div>
           </div>
           <hr />
           <small
             ><a
               id="github-link"
               href="https://github.com/taymick13/Weather-Application"
+              target="blank"
             >
               GitHub</a
             >
             Coded by
-            <a href="www.linkedin.com/in/taylor-mickelson2015"
+            <a
+              id="linkedin-link"
+              href="https://www.linkedin.com/in/taylor-mickelson2015"
+              target="blank"
               >Taylor Mickelson</a
             ></small
           >
